небольшие правки по пожеланиям

--- a/TranslationReg/Views/DocStages/Item.cshtml
+++ b/TranslationReg/Views/DocStages/Item.cshtml
@@ -6,7 +6,7 @@
     </div>
     <div class="control-buttons">
         <div class="control small">
-            <a data-ajax-update="#addUserStageForm@(Model.Id)" data-href="/User_Stage/Create/@Model.Id" id="addWork" class="btn btn-primary ajaxToggleBtn">Добавить работу</a>
+            <a data-ajax-update="#addUserStageForm@(Model.Id)" data-href="/User_Stage/Create/@Model.Id" id="addWork" class="btn btn-primary ajaxToggleBtn">Добавить исполнителя</a>
         </div>
         <div class="control small">
             <a class="btn btn-danger deleteBtn" href="/DocStages/Delete/@Model.Id" id="deleteWork" data-dialog-title="Удаление стадии">Удалить стадию</a>
