--- a/TranslationReg/Views/Documents/DocAndStages.cshtml
+++ b/TranslationReg/Views/Documents/DocAndStages.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TranslationRegistryModel.Document
 <div>
 
-    <h2>@Model.Name</h2>
+    <h2>Документ: @Model.Name</h2>
     <dl class="dl-horizontal">
         <dt>Создатель</dt>
         <dd>@Model.Owner.Name</dd>
