--- a/TranslationReg/Views/User_Stage/Create.cshtml
+++ b/TranslationReg/Views/User_Stage/Create.cshtml
@@ -7,7 +7,7 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     <div class="form-group">
-        @Html.LabelFor(model => model.work.UserId, "Пользователь")
+        @Html.LabelFor(model => model.work.UserId, "Исполнитель")
         @Html.DropDownList("UserId", Model.usersSelectList, new { htmlAttributes = new { @class = "form-control", required = "required" } })
         @Html.ValidationMessageFor(model => model.work.UserId, "", new { @class = "text-danger" })
     </div>
