--- a/TranslationReg/Views/Projects/Index.cshtml
+++ b/TranslationReg/Views/Projects/Index.cshtml
@@ -3,6 +3,11 @@
 
 <h2>Проекты</h2>
 
+<form class="search-form-wrapper cf">
+    <input type="text" placeholder="Search here..." required id="searchToken">
+    <button id="searchBtn" type="submit" data-href="Search/SearchByName" data-ajax-update="#projectList">Поиск</button>
+</form>
+
 <div class="container">
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
