--- a/TranslationReg/Views/WorkTypes/Cards.cshtml
+++ b/TranslationReg/Views/WorkTypes/Cards.cshtml
@@ -51,7 +51,7 @@
 
     <h2 style="text-align:center">Единицы измерения</h2>
     <!-- карточки статусов проекта -->
-    <div class="cardset-container" style="border-bottom: 1px solid lightgray">
+    <div class="cardset-container">
         <!-- карточка добавления -->
         <div id="addUnitOfMeasure">
             <div class="card card-aqua add-small-card">
