--- a/TranslationReg/Style/cards/addCard.css
+++ b/TranslationReg/Style/cards/addCard.css
@@ -34,3 +34,27 @@
     align-self: center;
     padding: 5px;
 }
+
+/*----------- стили для карточек добавления и редактирования -----------*/
+.add-card-content {
+    padding: 0 10px;
+    overflow: hidden;
+    display: flex;
+    cursor: pointer;
+}
+
+    .add-card-content > i {
+        float: left;
+        color: lightgray;
+    }
+
+    .add-card-content > p {
+        float: right;
+        margin: 0;
+        color: #3e5983;
+        font-weight: 600;
+        text-align: center;
+        font-size: 20px;
+        align-self: center;
+    }
+/*----------------------------------------------------------------------*/
