--- a/TranslationReg/Style/cards/card.css
+++ b/TranslationReg/Style/cards/card.css
@@ -149,6 +149,7 @@
     vertical-align: middle;
     align-self: center;
     font-size: 32px !important;
+    cursor: pointer;
 }
     .card-btn:hover {
         color: #000000;
@@ -214,26 +215,3 @@
         font-size: 20px;
     }
 /*-------------------------------------*/
-
-
-
-/*----------- стили для карточек добавления и редактирования -----------*/
-.add-card-content {
-    padding: 0 10px;
-    overflow: hidden;
-    display: flex;
-}
-    .add-card-content > i {
-        float: left;
-        color: lightgray;
-    }
-    .add-card-content > p {
-        float: right;
-        margin: 0;
-        color: #3e5983;
-        font-weight: 600;
-        text-align: center;
-        font-size: 20px;
-        align-self: center;
-    }
-/*----------------------------------------------------------------------*/
