--- a/TranslationReg/Style/style.less
+++ b/TranslationReg/Style/style.less
@@ -220,6 +220,7 @@ footer {
 
             .form-group {
                 display: flex;
+                font-weight: 400;
 
                 label {
                     margin: 0 10px 5px 0;
