--- a/TranslationReg/Views/Shared/_Layout.cshtml
+++ b/TranslationReg/Views/Shared/_Layout.cshtml
@@ -6,24 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Style/css")
+    @Styles.Render("~/Style/SideBar.css")
     @Scripts.Render("~/bundles/modernizr")
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
+    @*<div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav main-menu">
+                        <li>@Html.ActionLink("Проекты", "Index", "Projects")</li>
+                        <li>@Html.ActionLink("Документы", "Index", "Documents")</li>
+                        <li>@Html.ActionLink("Отчеты", "Index", "Analytics")</li>
+                        <li>@Html.ActionLink("О программе", "About", "Home")</li>
+                        <li>@Html.ActionLink("Языки", "Cards", "Languages")</li>
+                        <li>@Html.ActionLink("Типы работ", "Cards", "WorkTypes")</li>
+                    </ul>
+                    @Html.Partial("_LoginPartial")
+                </div>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav main-menu">
+        </div>
+         <div class="container body-content">
+                @RenderBody()
+
+            </div>*@
+    
+
+    <div id="wrapper" class="toggled">
+            <!-- Sidebar -->
+            <div id="sidebar-wrapper">
+
+                <ul class="sidebar-nav">
+                    <li class="sidebar-brand">@Html.Partial("_LoginPartial")</li>
                     <li>@Html.ActionLink("Проекты", "Index", "Projects")</li>
                     <li>@Html.ActionLink("Документы", "Index", "Documents")</li>
                     <li>@Html.ActionLink("Отчеты", "Index", "Analytics")</li>
@@ -31,14 +55,24 @@
                     <li>@Html.ActionLink("Языки", "Cards", "Languages")</li>
                     <li>@Html.ActionLink("Типы работ", "Cards", "WorkTypes")</li>
                 </ul>
-                @Html.Partial("_LoginPartial")
             </div>
-        </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
+            <!-- /#sidebar-wrapper -->
+            <!-- Page Content -->
+            <div id="page-content-wrapper">
 
-    </div>
+                <div class="container body-content">
+                    @RenderBody()
+
+                </div>
+            </div>
+            <!-- /#page-content-wrapper -->
+        </div>
+        <!-- /#wrapper -->
+
+
+
+
+
     <footer>
         <p>&copy; @DateTime.Now.Year – НИИ ТПУ</p>
     </footer>
