много правок стилей. фон, иконки materal

--- a/TranslationReg/Style/Site.css
+++ b/TranslationReg/Style/Site.css
@@ -1,8 +1,4 @@
-﻿body {
-    padding-top: 53px;
-    padding-bottom: 20px;
-}
-
+﻿
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding: 0 30px;
