--- a/TranslationReg/Views/LanguagePairs/Card.cshtml
+++ b/TranslationReg/Views/LanguagePairs/Card.cshtml
@@ -3,8 +3,8 @@
     <div class="card-header">
         <p>Языковая пара</p>
         <div>
-            <a class="fa fa-edit card-btn ajaxToggleCard" data-href="/LanguagePairs/EditCard/@Model.Id" data-ajax-update="#languagePair@(Model.Id)"></a>
-            <a class="fa fa-times card-btn deleteBtn" href="/LanguagePairs/Delete/@Model.Id" data-dialog-title="Удаление языковой пары"></a>
+            <i class="material-icons ajaxToggleCard card-btn" data-href="/LanguagePairs/EditCard/@Model.Id" data-ajax-update="#languagePair@(Model.Id)">mode_edit</i>
+            <i class="material-icons card-btn deleteBtn" data-href="/LanguagePairs/Delete/@Model.Id" data-dialog-title="Удаление языковой пары">delete</i>
         </div>
     </div>
     <div class="card-content">
