--- a/TranslationReg/Views/Languages/Card.cshtml
+++ b/TranslationReg/Views/Languages/Card.cshtml
@@ -4,8 +4,8 @@
     <div class="card-header">
         <p>Язык</p>
         <div>
-            <a class="fa fa-edit card-btn ajaxToggleCard" data-ajax-update="#language@(Model.Id)" data-href="/Languages/EditCard/@Model.Id"></a>
-            <a class="fa fa-times card-btn deleteBtn" href="/Languages/Delete/@Model.Id" data-dialog-title="Удаление языка"></a>
+            <i class="material-icons ajaxToggleCard card-btn" data-ajax-update="#language@(Model.Id)" data-href="/Languages/EditCard/@Model.Id">mode_edit</i>
+            <i class="material-icons card-btn deleteBtn" data-href="/Languages/Delete/@Model.Id" data-dialog-title="Удаление языка">delete</i>
         </div>
     </div>
     <div class="card-content">
