--- a/TranslationReg/Views/UnitOfMeasure/Card.cshtml
+++ b/TranslationReg/Views/UnitOfMeasure/Card.cshtml
@@ -5,8 +5,8 @@
     <div class="card-header">
         <p>Единица измерения</p>
         <div>
-            <a class="fa fa-edit card-btn ajaxToggleCard" data-ajax-update="#unitOfMeasure@(Model.Id)" data-href="/UnitOfMeasure/EditCard/@Model.Id"></a>
-            <a class="fa fa-times card-btn deleteBtn" href="/UnitOfMeasure/Delete/@Model.Id" data-dialog-title="Удаление типа работ"></a>
+            <i class="material-icons ajaxToggleCard card-btn"data-ajax-update="#unitOfMeasure@(Model.Id)" data-href="/UnitOfMeasure/EditCard/@Model.Id">mode_edit</i>
+            <i class="material-icons card-btn deleteBtn" data-href="/UnitOfMeasure/Delete/@Model.Id" data-dialog-title="Удаление типа работ">delete</i>
         </div>
     </div>
 
