--- a/TranslationReg/Views/WorkTypes/Card.cshtml
+++ b/TranslationReg/Views/WorkTypes/Card.cshtml
@@ -4,8 +4,8 @@
     <div class="card-header">
         <p>Тип работ</p>
         <div>
-            <a class="fa fa-edit card-btn ajaxToggleCard" data-ajax-update="#workType@(Model.Id)" data-href="/Worktypes/EditCard/@Model.Id"></a>
-            <a class="fa fa-times card-btn deleteBtn" href="/Worktypes/Delete/@Model.Id" data-dialog-title="Удаление типа работ"></a>
+            <i class="material-icons ajaxToggleCard card-btn" data-ajax-update="#workType@(Model.Id)" data-href="/Worktypes/EditCard/@Model.Id">mode_edit</i>
+            <i class="material-icons card-btn deleteBtn" data-href="/Worktypes/Delete/@Model.Id" data-dialog-title="Удаление типа работ">delete</i>
         </div>
     </div>
     <div class="card-content">
