--- a/TranslationReg/Views/WorkTypes/Cards.cshtml
+++ b/TranslationReg/Views/WorkTypes/Cards.cshtml
@@ -2,7 +2,7 @@
 <div>
     <!-- карточки типов работ -->
     <h2 style="text-align:center">Типы работ</h2>
-    <div class="cardset-container" style="border-bottom: 1px solid lightgray">
+    <div class="cardset-container">
         <!-- карточка добавления -->
         <div id="addWorktype">
             <div class="card card-orange add-small-card">
@@ -10,7 +10,7 @@
                     <p>Добавить тип работ</p>
                 </div>
                 <div class="add-card-content ajaxToggleCard" data-href="/WorkTypes/AddCard" data-ajax-update="#addWorktype">
-                    <i class="fa fa-plus-circle addCardIcon" style="font-size:100px"></i>
+                    <i class="material-icons addCardIcon" style="font-size:100px">add_circle</i>
                     <p>Нажмите чтобы добавить</p>
                 </div>
             </div>
@@ -26,7 +26,7 @@
 
     <h2 style="text-align:center">Статусы проектов</h2>
     <!-- карточки статусов проекта -->
-    <div class="cardset-container" style="border-bottom: 1px solid lightgray">
+    <div class="cardset-container">
 
         <!-- карточка добавления -->
         <div id="addProjectStatuse">
@@ -35,7 +35,7 @@
                     <p>Добавить статус проекта</p>
                 </div>
                 <div class="add-card-content ajaxToggleCard" data-href="/ProjectStatuse/AddCard" data-ajax-update="#addProjectStatuse">
-                    <i class="fa fa-plus-circle addCardIcon" style="font-size:100px"></i>
+                    <i class="material-icons addCardIcon" style="font-size:100px">add_circle</i>
                     <p>Нажмите чтобы добавить</p>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                     <p>Добавить ед. измерения</p>
                 </div>
                 <div class="add-card-content ajaxToggleCard" data-href="/UnitOfMeasure/AddCard" data-ajax-update="#addUnitOfMeasure">
-                    <i class="fa fa-plus-circle addCardIcon" style="font-size:100px"></i>
+                    <i class="material-icons addCardIcon" style="font-size:100px">add_circle</i>
                     <p>Нажмите чтобы добавить</p>
                 </div>
             </div>
