--- a/TranslationReg/Style/search/search.css
+++ b/TranslationReg/Style/search/search.css
@@ -1,118 +1,85 @@
-.cf:before, .cf:after {
-    content: "";
-    display: table;
-}
 
-.cf:after {
-    clear: both;
+.search-container{
+    text-align:center;
 }
-
-.cf {
-    zoom: 1;
-}
-
-/*-------------------------------------*/
 
 .search-form-wrapper {
-    width: 450px;
-    padding: 5px;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    background: #444;
-    background: rgba(0,0,0,.2);
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    -moz-box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
-    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
-    box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
+    display: inline-block;
 }
-
-    .search-form-wrapper input {
-        width: 330px;
-        height: 40px;
-        padding: 10px 5px;
-        float: left;
-        border: 0;
-        background: #eee;
-        -moz-border-radius: 3px 0 0 3px;
-        -webkit-border-radius: 3px 0 0 3px;
-        border-radius: 3px 0 0 3px;
-        max-width:none;
+.search-form-wrapper input {
+    width: 200px;
+    height: 30px;
+    float: left;
+    border: 0;
+    -moz-border-radius: 3px 0 0 3px;
+    -webkit-border-radius: 3px 0 0 3px;
+    border-radius: 3px 0 0 3px;
+    max-width: none;
+    padding: 5px 10px;
+}
+    .search-form-wrapper input:focus {
+        outline: 0;
+        -moz-box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
+        -webkit-box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
+        box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
+    }
+    .search-form-wrapper input::-webkit-input-placeholder {
+        color: #999;
+        font-weight: normal;
+        font-style: italic;
+    }
+    .search-form-wrapper input:-moz-placeholder {
+        color: #999;
+        font-weight: normal;
+        font-style: italic;
+    }
+    .search-form-wrapper input:-ms-input-placeholder {
+        color: #999;
+        font-weight: normal;
+        font-style: italic;
     }
 
-        .search-form-wrapper input:focus {
-            outline: 0;
-            background: #fff;
-            -moz-box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
-            -webkit-box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
-            box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
-        }
+.search-form-wrapper button {
+    overflow: visible;
+    position: relative;
+    float: left;
+    border: 0;
+    padding: 0;
+    cursor: pointer;
+    height: 30px;
+    width: 60px;
+    color: #fff;
+    background: #282828;
+    -moz-border-radius: 0 3px 3px 0;
+    -webkit-border-radius: 0 3px 3px 0;
+    border-radius: 0 3px 3px 0;
+    text-shadow: 0 -1px 0 rgba(0, 0,0, .3);
+}
+    .search-form-wrapper button:hover {
+        background: #101010;
+    }
 
-        .search-form-wrapper input::-webkit-input-placeholder {
-            color: #999;
-            font-weight: normal;
-            font-style: italic;
-        }
-
-        .search-form-wrapper input:-moz-placeholder {
-            color: #999;
-            font-weight: normal;
-            font-style: italic;
-        }
-
-        .search-form-wrapper input:-ms-input-placeholder {
-            color: #999;
-            font-weight: normal;
-            font-style: italic;
-        }
-
-    .search-form-wrapper button {
-        overflow: visible;
-        position: relative;
-        float: right;
+    .search-form-wrapper button:before {
+        content: '';
+        position: absolute;
+        border-width: 8px 8px 8px 0;
+        border-style: solid solid solid none;
+        border-color: transparent #282828 transparent;
+        top: 8px;
+        left: -6px;
+    }
+    .search-form-wrapper button:active,
+    .search-form-wrapper button:focus {
+        transition: 0.2s;
+        background: #101010;
+    }
+    .search-form-wrapper button:hover:before {
+        border-right-color: #101010;
+    }
+    .search-form-wrapper button:focus:before {
+        border-right-color: #101010;
+    }
+    .search-form-wrapper button::-moz-focus-inner {
         border: 0;
         padding: 0;
-        cursor: pointer;
-        height: 40px;
-        width: 110px;
-        color: #fff;
-        background: #282828;
-        -moz-border-radius: 0 3px 3px 0;
-        -webkit-border-radius: 0 3px 3px 0;
-        border-radius: 0 3px 3px 0;
-        text-shadow: 0 -1px 0 rgba(0, 0,0, .3);
     }
-
-        .search-form-wrapper button:hover {
-            background: #101010;
-        }
-
-        .search-form-wrapper button:active,
-        .search-form-wrapper button:focus {
-            transition: 0.2s;
-            background: #101010;
-        }
-
-        .search-form-wrapper button:before {
-            content: '';
-            position: absolute;
-            border-width: 8px 8px 8px 0;
-            border-style: solid solid solid none;
-            border-color: transparent #282828 transparent;
-            top: 12px;
-            left: -6px;
-        }
-
-        .search-form-wrapper button:hover:before {
-            border-right-color: #101010;
-        }
-
-        .search-form-wrapper button:focus:before {
-            border-right-color: #101010;
-        }
-
-        .search-form-wrapper button::-moz-focus-inner {
-            border: 0;
-            padding: 0;
-        }
