--- a/TranslationReg/Views/LanguagePairs/AddCard.cshtml
+++ b/TranslationReg/Views/LanguagePairs/AddCard.cshtml
@@ -10,7 +10,7 @@
         <div class="card-header">
             <p>Добавить языковую пару</p>
             <div>
-                <a class="fa fa-arrow-circle-left card-btn" href="/Languages/Cards"></a>
+                <a href="/Languages/Cards" style="display:flex; text-decoration:none"><i class="material-icons card-btn">undo</i></a>
             </div>
         </div>
 
