--- a/TranslationReg/Views/ProjectStatuse/EditCard.cshtml
+++ b/TranslationReg/Views/ProjectStatuse/EditCard.cshtml
@@ -9,7 +9,7 @@
         <div class="card-header">
             <p>Редактировать статус</p>
             <div>
-                <a class="fa fa-arrow-circle-left card-btn" href="/Worktypes/Cards"></a>
+                <a href="/Worktypes/Cards" style="display:flex; text-decoration:none"><i class="material-icons card-btn">undo</i></a>
             </div>
         </div>
 
