--- a/TranslationReg/Views/Projects/List.cshtml
+++ b/TranslationReg/Views/Projects/List.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<TranslationRegistryModel.Project>
 
-<div class="tablesList" id="languageEditor">
+<div class="tableMaterial">
     <div class="titles">
         <div class="col-md-4">@Html.Label("Название")</div>
         <div class="col-md-1">@Html.Label("Статус")</div>
@@ -12,38 +12,42 @@
 
     @foreach (var project in Model)
     {
-    <div class="properties">
-        <div class="col-md-4">
-            <a class="titleLink" href="/Projects/TabPages/@(project.Id)">@project.Name</a>
-        </div>
-        <div class="col-md-1">
-            <span>
-                @Html.DisplayFor(modelItem => project.ProjectStatus.Name)
-            </span>
-        </div>
-        <div class="col-md-2">
-            <span>
-                @Html.DisplayFor(modelItem => project.Creator.Name)
-            </span>
-        </div>
-        <div class="col-md-1">
-            <span>
-                @Html.DisplayFor(modelItem => project.LanguagePair.Name)
-            </span>
-        </div>
-        <div class="col-md-1">
-            <span>
-                @project.Date.ToString("dd/MM/yyyy")
-            </span>
-        </div>
-        <div class="col-md-3">
-            <div class="buttons-container">
-                <a href="/Projects/Edit/@project.Id" class="btn btn-primary">Редактировать</a>
-                <a href="/Projects/Delete/@project.Id" class="btn btn-danger deleteBtn" data-dialog-title="Удаление проекта и содержимого">Удалить</a>
+        <div class="properties">
+            <div class="col-md-4">
+                <a class="titleLink" href="/Projects/TabPages/@(project.Id)">@project.Name</a>
             </div>
+            <div class="col-md-1">
+                <span>
+                    @Html.DisplayFor(modelItem => project.ProjectStatus.Name)
+                </span>
+            </div>
+            <div class="col-md-2">
+                <span>
+                    @Html.DisplayFor(modelItem => project.Creator.Name)
+                </span>
+            </div>
+            <div class="col-md-1">
+                <span>
+                    @Html.DisplayFor(modelItem => project.LanguagePair.Name)
+                </span>
+            </div>
+            <div class="col-md-1">
+                <span>
+                    @project.Date.ToString("dd/MM/yyyy")
+                </span>
+            </div>
+            <div class="col-md-3">
+                <div class="buttons-container">
+                    <a href="/Projects/Edit/@project.Id" class="listIcon">
+                        <i class="material-icons">mode_edit</i>
+                    </a>
+                    <a data-href="/Projects/Delete/@project.Id" class="deleteBtn listIcon" data-dialog-title="Удаление проекта и содержимого">
+                        <i class="material-icons">delete</i>
+                    </a>
+                </div>
+            </div>
+            <div id="@(project.Id)" class="dynamicBlock dynamicBlock-prop"></div>
         </div>
-        <div id="@(project.Id)" class="dynamicBlock dynamicBlock-prop"></div>
-    </div>
-        
+
     }
 </div>
