--- a/TranslationReg/Views/UnitOfMeasure/AddCard.cshtml
+++ b/TranslationReg/Views/UnitOfMeasure/AddCard.cshtml
@@ -7,7 +7,7 @@
         <div class="card-header">
             <p>Добавить единицу измерения</p>
             <div>
-                <a class="fa fa-arrow-circle-left card-btn" href="/Worktypes/Cards"></a>
+                <a href="/Worktypes/Cards" style="display:flex; text-decoration:none"><i class="material-icons card-btn">undo</i></a>
             </div>
         </div>
 
