--- a/TranslationReg/Views/Shared/_Layout.cshtml
+++ b/TranslationReg/Views/Shared/_Layout.cshtml
@@ -17,6 +17,13 @@
             <div class="menu">
                 <div class="menu-header">
                     @Html.Partial("_LoginPartial")
+                    @if (Request.IsAuthenticated)
+                    {
+                                @Html.AntiForgeryToken()
+                                <div class="hello">
+                                    Здравствуйте,   @User.Identity.Name!
+                                </div>
+                    }
                 </div>
                 <div class="menu-content">
                     <!-- ПОИСК -->
@@ -34,8 +41,18 @@
                         <li>@Html.ActionLink("Языки", "Cards", "Languages")</li>
                         <li>@Html.ActionLink("Типы работ", "Cards", "WorkTypes")</li>
                         <li>@Html.ActionLink("О программе", "About", "Home")</li>
+                        @if (Request.IsAuthenticated)
+                        {
+                        <li class="logout">
+                            <a href="javascript:document.getElementById('logoutForm').submit()">Выйти</a>
+                        </li>
+                        }
+
+
                     </ul>
                 </div>
+                
+
                 <div class="menu-footer">
                     <div class="footer">
                         <p>&copy; @DateTime.Now.Year – НИИ ТПУ</p>
@@ -64,7 +81,18 @@
 </html>
 
 <style>
-
+    .hello {
+        font-size: 20px;
+        padding-top:10px;
+        text-align: center;
+        display: block;
+        margin: auto;
+        color: white;
+    }
+    .logout {
+        margin-top: 30px !important;
+        font-size: 16px !important;
+    }
     .listIcon {
         color: #3d5279;
     }
@@ -116,7 +144,6 @@
             background-color: #241717;
             overflow: hidden;
             border-right: 1px solid #000000;
-            background-image: url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/JrbItQz/videoblocks-chaotic-black-low-poly-surface-waving-loopable-3d-animation-4k-uhd-3840x2160_rzqprzplz_thumbnail-full01.png);
             background-color: #3d5279;
             background-size: cover;
             box-shadow: 5px 1px 6px 1px rgba(0, 0, 0, 0.4);
