--- a/TranslationReg/Views/Shared/_LoginPartial.cshtml
+++ b/TranslationReg/Views/Shared/_LoginPartial.cshtml
@@ -5,12 +5,12 @@
 
 @{
     // получение данных об аватарке
-    var ticketData = ((FormsIdentity)User.Identity).Ticket.GetStructuredUserData();
+    //var ticketData = ((FormsIdentity)User.Identity).Ticket.GetStructuredUserData();
     string avatarPath = null;
-    if (ticketData != null)
-    {
-        avatarPath = ticketData["avatarPath"];
-    }
+    //if (ticketData != null)
+    //{
+    //    avatarPath = ticketData["avatarPath"];
+    //}
     // не получили - дефолтная аватарка
     if (string.IsNullOrEmpty(avatarPath))
     {
@@ -27,16 +27,14 @@
 
 @if (Request.IsAuthenticated)
 {
-    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+    @*using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
         @Html.AntiForgeryToken()
-        <div>
+        <div class="hello">
             @Html.ActionLink("Здравствуйте, " + User.Identity.GetUserName() + "!", "Login", "Account", routeValues: null, htmlAttributes: new { title = "Manage" })
         </div>
-        <div>
-            <a href="javascript:document.getElementById('logoutForm').submit()">Выйти</a>
-        </div>
-    }
+       
+    }*@
 }
 else
 {
@@ -45,6 +43,12 @@ else
 }
 
 <style>
+    .hello {
+        font-size: 16px;
+        text-align: center;
+        display: block;
+        margin: auto;
+    }
     .avatar-container {
         height: 60px;
         padding: 10px;
